[package]
name = "bpfjit-sys"
version = "2.1.0"
description = "Rust bindings to NetBSD's cBPF JIT engine"
readme = "README.md"
repository = "https://github.com/alexforster/bpfjit-sys"
homepage = "https://github.com/alexforster/bpfjit-sys"
keywords = ["bpf", "cbpf", "jit", "libbpfjit", "libpcap"]
authors = ["Alex Forster <alex@alexforster.com>"]
license = "BSD-2-Clause"
edition = "2018"
build = "build.rs"

[badges]
travis-ci = { repository = "alexforster/bpfjit-sys" }
maintenance = { status = "passively-maintained" }

[dependencies]
libc = "0.2"
lazy_static = "1.4"

[build-dependencies]
cc = "1.0"

[lib]
crate-type = ["lib", "staticlib"]
